fixed tap size target on mobile in BlogCard

--- a/next.js/src/components/moleculas/BlogCard/styles.module.scss
+++ b/next.js/src/components/moleculas/BlogCard/styles.module.scss
@@ -32,6 +32,9 @@
     position: absolute;
     right: -1px;
     top: -1px;
+    display: flex;
+    align-items: center;
+    min-height: 48px;
     padding: 12px clamp(16px, calc(16vw/7.68), 20px);
     background: linear-gradient(var(--background-200), var(--background-200)) padding-box, var(--gradient-100) border-box;
     border: 1px solid rgba(255, 255, 255, 0);
